# komado

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
komado/: __init__.py  demo.py  form.py  formula.py  motion.py  sheet.py  theme.py
tests/: test_fields.py  test_form.py  test_formula.py  test_motion.py  test_sheet.py  test_smoke.py  test_theme.py
