[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "komado"
version = "0.2.0"
description = "Textual向けのTUI部品集。フォームバリデーションや表計算ウィジェットを提供する"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "miruky" }]
requires-python = ">=3.12"
dependencies = ["textual>=0.80"]
keywords = ["textual", "tui", "widgets", "form", "spreadsheet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Repository = "https://github.com/miruky/komado"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["komado"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
